# TodoApp-Flask

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.toml
pytodo/: app.py
pytodo/blueprints/: views.py
pytodo/extensions/: model.py
pytodo/templates/: index.html
